--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,7 @@ authors = [
 ]
 readme = "README.md"
 license = { text = "MIT" }
-keywords = [
-    "python",
-    "vulnerability management",
-    "lab environment",
-    "automation",
-]
+keywords = ["python", "digipin", "coordinates"]
 classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
@@ -26,6 +21,11 @@ classifiers = [
     "Topic :: Security",
 ]
 requires-python = ">=3.9,<4.0"
+
+[tool.poetry]
+packages = [
+    { include = "digipin", from = "src" },
+]
 
 [tool.black]
 line-length = 98
