--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,12 +30,6 @@ jobs:
             - name: Configure Poetry for PyPI
               run: poetry config pypi-token.pypi ${{ secrets.POETRY_PYPI_TOKEN }}
 
-            - name: Build Distribution
-              run: poetry build --no-interaction --no-ansi
-
-            - name: Publish to PyPI
-              run: poetry publish --no-interaction --no-ansi
-
             - name: Extract Version from Tag
               id: version
               run: echo "value=${GITHUB_REF_NAME#v}" >> $GITHUB_OUTPUT
@@ -43,6 +37,12 @@ jobs:
             - name: Bump Version in pyproject.toml
               run: |
                   poetry version "${{ steps.version.outputs.value }}"
+
+            - name: Build Distribution
+              run: poetry build --no-interaction --no-ansi
+
+            - name: Publish to PyPI
+              run: poetry publish --no-interaction --no-ansi
 
             - name: Commit Version Update
               run: |
@@ -55,4 +55,4 @@ jobs:
               uses: ad-m/github-push-action@v0.6.0
               with:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
-                  branch: ${{ github.ref_name }}s
+                  branch: main
