--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -6,9 +6,10 @@ authors = [
     {name = "Subhomoy Roy Choudhury",email = "subhomoyrchoudhury@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 dependencies = [
-    "fastapi (>=0.115.12,<0.116.0)"
+    "fastapi (>=0.115.12,<0.116.0)",
+    "uvicorn[standard] (>=0.34.3,<0.35.0)"
 ]
 
 [tool.poetry]
