added render trigger after docker image push

--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -61,3 +61,6 @@ jobs:
                   echo "Built and pushed images:"
                   echo "Dockerfile: ${{ steps.docker-config.outputs.dockerfile }}"
                   echo "Tags: ${{ steps.docker-config.outputs.tags }}"
+
+            - name: Trigger Render Deployment
+              run: curl -X POST ${{ secrets.RENDER_DEPLOY_HOOK }}
