--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -33,4 +33,4 @@ COPY . /app/.
 EXPOSE 8000
 
 # Run FastAPI using Uvicorn
-CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
