--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -6,10 +6,11 @@ authors = [
     {name = "Subhomoy Roy Choudhury",email = "subhomoyrchoudhury@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<4.0"
 dependencies = [
     "fastapi (>=0.115.12,<0.116.0)",
-    "uvicorn[standard] (>=0.34.3,<0.35.0)"
+    "uvicorn[standard] (>=0.34.3,<0.35.0)",
+    "digipin-python (>=0.1.3,<0.2.0)"
 ]
 
 [tool.poetry]
