--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -10,7 +10,8 @@ requires-python = ">=3.11,<4.0"
 dependencies = [
     "fastapi (>=0.115.12,<0.116.0)",
     "uvicorn[standard] (>=0.34.3,<0.35.0)",
-    "digipin-python (>=0.1.3,<0.2.0)"
+    "digipin-python (>=0.1.3,<0.2.0)",
+    "pydantic-settings (>=2.9.1,<3.0.0)"
 ]
 
 [tool.poetry]
