--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "digipin-python"
 version = "0.1.5"
-description = ""
+description = "A Python library to encode geographic coordinates into DIGIPIN and decode DIGIPINs back to coordinates."
 authors = [
     { name = "Subhomoy Roy Choudhury", email = "subhomoyrchoudhury@gmail.com" },
 ]
@@ -23,6 +23,9 @@ classifiers = [
 requires-python = ">=3.9,<4.0"
 
 [tool.poetry]
+homepage = "https://github.com/crackedngineer/digipin-python"
+repository = "https://github.com/crackedngineer/digipin-python"
+documentation = "https://github.com/crackedngineer/digipin-python/"
 packages = [
     { include = "digipin", from = "src" },
 ]
